Raza Doram y Job Summoner
- Implementación completa.

www.ign.do/ragnarok

--- a/conf/battle/player.conf
+++ b/conf/battle/player.conf
@@ -97,6 +97,7 @@ max_third_trans_parameter: 135
 max_baby_parameter: 99
 max_baby_third_parameter: 135
 max_extended_parameter: 135
+max_summoner_parameter: 135
 
 // Status points bonus for transcendent class
 transcendent_status_points: 54
