--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -82,13 +82,17 @@ save_log: yes
 
 // Starting point for new characters
 // Format: <map_name>,<x>,<y>
+// NOTE: For Doram, this requires client 20151001 or newer.
 start_point: ilyo_kwan,144,81
+start_point_doram: ilyo_kwan,144,81
 
 // Starting items for new characters
 // Max number of items is MAX_STARTITEM in char.c (default 32)
 // Format: <id>,<amount>,<position>:<id>,<amount>,<position>:...
 // To auto-equip an item, include the position where it will be equipped; otherwise, use zero.
+// NOTE: For Doram, this requires client 20151001 or newer.
 start_items: 2301,1,16:1203,1,2
+start_items_doram: 1681,1,2:2301,1,16
 
 // Starting zeny for new characters
 start_zeny: 10000
